# ChangeLog for app-text/qpdfview
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/qpdfview/ChangeLog,v 1.59 2014/12/13 15:15:02 yngwin Exp $

  13 Dec 2014; Ben de Groot <yngwin@gentoo.org> qpdfview-0.4.12.ebuild:
  With qt5 it needs qtprintsupport to build

*qpdfview-0.4.12 (02 Nov 2014)

  02 Nov 2014; Ben de Groot <yngwin@gentoo.org>
  +files/qpdfview-0.4.12-no_sql.patch, +qpdfview-0.4.12.ebuild:
  Version bump, with patch from bug #526462. Tightening up formatting again.

  28 Sep 2014; Davide Pesavento <pesa@gentoo.org> qpdfview-0.4.11.1.ebuild:
  Minor cleanup.

*qpdfview-0.4.11.1 (24 Sep 2014)

  24 Sep 2014; Ben de Groot <yngwin@gentoo.org> +qpdfview-0.4.11.1.ebuild,
  metadata.xml:
  Version bump. Thanks to Alpha Bravo in bug #506068 for ebuild improvements.

  16 Jan 2014; Michael Palimaka <kensington@gentoo.org> -qpdfview-0.4.4.ebuild,
  -qpdfview-0.4.6.ebuild:
  Remove old.

  14 Dec 2013; Markos Chandras <hwoarang@gentoo.org>
  +files/qpdfview-0.4.7-fix-sqlite-build.patch, qpdfview-0.4.7.ebuild:
  Add upstream patch to fix build with USE=-sqlite. Bug #493514. Patch by Franz
  Fellner <alpine.art.de@googlemail.com>

*qpdfview-0.4.7 (07 Dec 2013)

  07 Dec 2013; Ben de Groot <yngwin@gentoo.org> +qpdfview-0.4.7.ebuild:
  Version bump

  13 Nov 2013; Sébastien Fabbro <bicatali@gentoo.org> qpdfview-0.4.6.ebuild:
  Keyworded amd64-linux and x86-linux

*qpdfview-0.4.6 (21 Oct 2013)

  21 Oct 2013; Ben de Groot <yngwin@gentoo.org> +qpdfview-0.4.6.ebuild:
  version bump

*qpdfview-0.4.4 (04 Sep 2013)

  04 Sep 2013; Sergey Popov <pinkbyte@gentoo.org> qpdfview-0.4.3.ebuild,
  +qpdfview-0.4.4.ebuild:
  Version bump. Make dependency on app-text/poppler optional

  04 Jul 2013; Michael Palimaka <kensington@gentoo.org>
  -qpdfview-0.4.2-r1.ebuild:
  Remove old.

  04 Jul 2013; Agostino Sarubbo <ago@gentoo.org> qpdfview-0.4.3.ebuild:
  Stable for x86, wrt bug #475096
