@@ -8,27 +8,27 @@ DIST qpdfview-0.4.12.tar.gz 550047 SHA256 0fb8166919de7a613e1112aa0886f55605d14e
 DIST qpdfview-0.4.3.tar.gz 351371 SHA256 66c579e6e837aed532a1389ced4987cce1055cea36f8b3d61b634dd8cbdd8c79 SHA512 eff18828bda1fbec5004d301ba9beea912064451a3ebe686853dedc64faeb2a423a49d3cf281f48740e144552f8f3bec6be70bb5e38f4a6604b89e68fe5bfa3b WHIRLPOOL 74bf95f126d95efec68401d33391ce09b560f1ee4fa4a57e35e7941c9a33e55206b7f1a7771ffb8349447447e544f0cc9008f91c73f07f37d6ea73d2f290184c
 DIST qpdfview-0.4.7.tar.gz 452990 SHA256 c6c0fc8990f4585291826b5b392a5a2d43168a46ae5ddfaebbfa0e8c9f9be442 SHA512 ce224c6baf00912f88fc2a9c5f929149d9f37ca736925e5d0b1215a57aa7c96f17b35963edef2b307d476c0942e7150f413b9cf21341bc5acf02d0d919d20567 WHIRLPOOL 27fd1dfb9b4f220447e89f9d4133cf2294dd05c83b8405a923428e68e634b2ccacb8df219cc9ec67620838275ae556e440d2da6425f0dc23e2e11986359671d4
 EBUILD qpdfview-0.4.11.1.ebuild 2355 SHA256 e740477e21c385659117feeeb893635003dc14491bd373651927d2ace192d4ca SHA512 92a7d400e5acd1dd41a51c68d1b8cf88a6d41c1c433d31dc267ed3724133c4c7cd8156a72af750d84c80a76801ecc6994271186ad59aab45b7cd4349abaa97ef WHIRLPOOL 316f011bd5ec794c35a1dd8cb945eabdd209e223bce119673320b421decb4ac0e5ce8e24927b94fc910d027588fce2f69937aa2cbb5b1f8acccb1fb8e22d9681
-EBUILD qpdfview-0.4.12.ebuild 2420 SHA256 3bb80cf174ff43048f9e68817ce1be631adf746c120b2a01317060d7b79145b4 SHA512 a40ec6359f8300112c714b8c3386b90e7a5ff0478c809bab609d18f70ed784148d02b068bdf9a4296482a8e7352c1326d1c9b6e06a5a144ff37ddf8f20e6f663 WHIRLPOOL 78b54728928352615a509c9c9045283a234c6faf52c1c0ff0086e9cac76a77ed07a744cfe18378fdd66e9892d0859dc36ddeea9819b1dea765bac6b4cc3b6c7c
+EBUILD qpdfview-0.4.12.ebuild 2446 SHA256 3dc778979640c0383cee103bedb1dcd772ac20cfd3f67f78667376b5d652d644 SHA512 8e46a4d4e6d713b465d25b24614a5282377f0700670a66776b206f6fc158608ffe7fb0eb72ff7bdf1f30742a3f026fecfe695bb1d107a7672c27e209a92b99a5 WHIRLPOOL eed041f31bf099119128db805f03d4f11b42246eac43fb8f78302fc26dcee32a34d63f32d14d2de223a488d7896ec50d3411a0169725b4d8401b4a23559c460a
 EBUILD qpdfview-0.4.3.ebuild 1589 SHA256 ce39f08f84a3d6af4ccea913ff8cb0e863147a61618f6f7a842e9a8add1e5e30 SHA512 e9e55fe6ccc326442b371a17434970664ab07d50e5d9bfca89e2e5103c65ff9033bcf26a9e6d617dc19cba534f04b81b5b8f1b5fbd3c7fe362a576cb05fa8735 WHIRLPOOL 5dc94fd40476331cf600feb8c023e0ca194ba402a81fac19939367a8c32b11c782402176ee404f3d7953b344d0a330ae577e652e67ab5cea5d2b6aaa418d9144
 EBUILD qpdfview-0.4.7.ebuild 1965 SHA256 a39f4b7b525047bcf262a7f45c391e508349818b00f1880a7a1662231d85d36e SHA512 695dd8a9e28665046d697d6eb9492a7eb0bf7dcfc3db4b9a3399fb5350fd35d76a4c81af7997c9d570a86bb98db236486f6aaa19005ca3b9d8414e71bdcc2604 WHIRLPOOL eab564b0f26c6f66d479010948372731141f67d140443ba031d21e29631b8d5a051df81b51a8ea07b04944871d695a797bfadfab3ead76846bde5b95944b7036
-MISC ChangeLog 8928 SHA256 77e48da0430de521994dbaa1cb24cdab32a4b1c3215e671865f838af63ef1318 SHA512 ee4abc457e0ec7f4b5844db10ac0b4a5b734a394213a5a1bf9e33ba33cdfbe87d793e7200ce0b6234c30f6a1d313b7f1ae7da93f47114e957b7329375bff72bb WHIRLPOOL 0d473e630a0f0bd3fca215365a741a25fe53a7ffd7f257655109476cb97bde10043674861f22aac95764ad88f9986eda7a87d0e1ab5f8fd59c6721c24039df3d
+MISC ChangeLog 9074 SHA256 35edb98a4122c0402648f6f38797725775b8bbd57dbc49b00b26f8c8af288a97 SHA512 7a2cfe76ac92804cefee7b8868e5b731f4aac8d16b6a84bb7916b559c9e05f12fadb4847544929f8a33a9e268250b43381b40faa58811361386c802d1a3d5122 WHIRLPOOL 4e02bc48075b6a57906472c2fb3c44889c509e5f91faf86a11537253c7e32df707ed3da2f600ac35b8c9ade4aced641fb3e9cb23a52796391dd565ea77e0547f
 MISC metadata.xml 324 SHA256 30352002c854254badfc797fb3a9480c343df391efbe04f5a6a8c01714ae5388 SHA512 64d4d673f23dbbc32fd0e5edb232ad7224ad95f75aaab842afa826c9099fb69637dcb9eabc9fda7d34ab9a17b3db29cf87f96725c60f7bb77147e64f0e3b2ea1 WHIRLPOOL 91f2ad25d41494d1d67e869b6ebfc328ccca8352971e796e8d268a1e1cbd41bef7ee785e68e5539017dff20458958ee52f1b33bcb8a8d023b3f8e53b87c7b102
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJUjFf8XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJUm+cFXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyOTZFRkUxOEEyRDM1Qzc2QTY0M0Y2QjQw
-RjlDNTkwQjdGRjMyNEY2AAoJEA+cWQt/8yT2kncP/jCzPjlzqQ6r8v+EczTsB1fm
-Cm5bnG76Hx2//78AsuYSSJmFtGbCx7OggrSWNeK+jVMO+9mtph9QSqVdft1FCAIi
-Hct0+MuW7I33uyWV0iO4yKRMf7LimwNiCcpykGyyF1DGFVMCoGZ1H1rV3NyJR66R
-8bPmPtLecNs9Iri19SH8XdM0O9z2SV1wmjeBpjB4UPT29CRvTuYap49Ru+BgGhpZ
-SNdebqlKdkAIKMC4TI7cO4VU1O3AxjLbGoBp3biecsPlJTbIt5aMMD61huNt34b8
-sIFCFHAoceJwUA6mSaDEwys+mPgtSBcaE/Sb+UhW581vxoC/KMOtMmkx3hr/rfpi
-DhMgU73nL+xauQjkNLFHZnlg/tsIE7D48Xk0fNru4vwnNNznBhr2xrw23bN9tPOS
-ccDNYjulDeovyjtwJxBvF+o9Gdounyzjf5S5xhEAPtk22VznffgQfqt8XN8lS6zc
-PxAjdpSf/nLRlqNcYhlR9oFbNJGO9rRnxJHf1LrAEdDX7m1EZrRTPAZw3X/sAqyY
-At7OOp6wluLd2rnMAtNNO90kzU4eo3XHNqi0imu0Gvl7vJaRmiFHnl7+W4AKj/R/
-nQWgxkhZ8xWRDuiWvnoNXzZN3Bzx1LM5QP6gca23pBvaFBn56jGTuNysbJYS6bY/
-baushxOngzufflxjtYl7
-=8obZ
+RjlDNTkwQjdGRjMyNEY2AAoJEA+cWQt/8yT2IhgQAJnmQ8Glyor76hkY+8bJSuK6
+U/jTt+Vgg2fv7hScq1tCPwCFeWVDjewkaTHXElWclwlUuKkUHK2LgPDdTgbvesPr
+hhYb80wOy2qPNGFSJ9ukj9qUenv7G+dd+r1aq5jvMxcG5Px9ZD6SdYJXLmSjOkGD
+r4PrU9BO1xg7FygdaTVsQ+dpKQEgqczyvR2vrz4/QqWARtH5v1GfHyFWDodShN7F
+KtXaMbyHZMuCmVUJt7ntbfd1RDg1iLjuSTUeatKgl98BC4R1d1UpUf7Fd3UZ8Cn9
+k4vTSS7rDy3+t3d9AxkIo0zKhunWsNQ5e5DOv1gtzgwc/6pCJJAHAiY7t7U19y1Z
+4cSKRPmnZbAC9VBeeZwpamzMv2uRBCelCjUqla+EUmNsZe9mrGHaJY2JVKGHKyek
+yOnwRE8/Esw/zmBtSDMLz37X5EBfKBssKi7qyCTOuFQ9+u/k9nxbnhkrIxX5oE4T
+xaGOIoISO3uzepoc8B+OyB8jmVzDidln78Ug9u4JTTVhCfo4rUi3rW/9LZ8P/17j
+ZKgmCmb59Dk1fBND+Fvq6xIpYKtP22lb8hMXOo1X3gXvcBwBBaoOWLSkWJEf0PWC
+Wtsm4/KpGLy0+Griy7MIreXd34+Rdf1sAU6uzgMA0jgxtGrx/cQRXKqwNZZHHdcl
+kvrjl9HYFhOCqXwqTwqg
+=tKZs
 -----END PGP SIGNATURE-----
