@@ -27,16 +27,16 @@ EBUILD fontconfig-2.10.92.ebuild 4314 SHA256 c818ba919896a05fb47a64792ccad821c05
 EBUILD fontconfig-2.10.93.ebuild 4721 SHA256 b9b9372bee2da410b3ea7a888a7e2450a5c9f55f547fc9e20c51c5000a88e9b3 SHA512 e1f5d69216a5e9469d5c5f0ccd435991ce381e627244c0a49039ef88d77ff1ee176d9b1c907999f8cb75f3d8ace7688756defb5c08251fcf0e828f0860a3c91f WHIRLPOOL 5d3f031c55aa2eb854ca0cb37f271a29b432eea2570c45ab3cb62fd72bff5de3690cf2a6b46854fce3a5eeac5578c9a14cfb409e5148cb1ee87586289d2d71b4
 EBUILD fontconfig-2.11.0-r1.ebuild 4902 SHA256 f008bdfef0636b1fa8141e4bcdeb2ae5344041bfc2a6d5b155de474e33da50c7 SHA512 97fee695183d59e7bcd7208d2fa1044aa1996e38938cf79723f12c49b256426111f5eeceac45087bf66c50f1232fe502bfbd65970abbfe571415b27350964d1b WHIRLPOOL ca343f3d103a40016e1608bf0e9c0a3a14a7ace064ec7f1c1e3ac471cb6367241729dadf099043ba5fd8f8edd69270055b32cb8e275d9dcdafdf6207e5ce901c
 EBUILD fontconfig-2.11.1-r1.ebuild 4886 SHA256 3e9f72372c4f38a401c5348cc72257f2e85642c91354f4fdf7199c0a24384756 SHA512 1155627a61b2e8469b284fb59770abb142b7d76f6b9dc30e160c525324f542489fcc0f34808cf9c75b612183df121892070ad969f62e1c725c7c7675b3f8391f WHIRLPOOL 41fd4da60058be6653ab619d9bcacdf9d5092c9825094867ab046e83289454e841a1cd1179c290980cce8f7592508c9457b95877e8f216ffb20fbd81c3df656a
-EBUILD fontconfig-2.11.1-r2.ebuild 4939 SHA256 3ccac91115c95a57f7afb1b558e938e11808e8380ba8d6a22e566a18d2e4ff78 SHA512 abd3099b432713220815f8548eb2e1b8a6a8e7591afe9c9dad1c0d7d22a7b9cc01744c8301ee7d39ea930a2f63ec13da84cb7c8c0e7e943eaff77a6dfab801f0 WHIRLPOOL e1d6082bad64d5961dcc9cf224b9cde5dd6ebb4460701f4e795c4efb9f2d16ce8a3c9cbd74d219275852a7b0565f589400a8ba1b38053fd78638e6a2b15dfd5a
+EBUILD fontconfig-2.11.1-r2.ebuild 4936 SHA256 b5165698457a290e989dae988599978cefc8ab392b083afd63c1550f41229e11 SHA512 56b12d5a0d44f8082221623d6e3699caf6148f38bd9e25c6a68df6f84a919b95b95f4eec222a1a5c274297f3668a7700373b803b56103b6cce925bb2c4a70f58 WHIRLPOOL 839113641da0a394e1fc66fd22df6a844fdd0357d2b88e8480dd77ff573180c29db2debeb2e18192739b863a19a858c11a2d9dfbc61e1badf1ef38efc9844c47
 EBUILD fontconfig-2.11.1.ebuild 4728 SHA256 bc7a72daa683e8516339caabd70ba925a32ca982b44e957962361bd28b42fb26 SHA512 7bc8c496e8f02f2c1b579c80d79286b6f8cccd3a6e054848d2d8db6166cbd63b519d074378596b5f28db6fbe477e6037492bbf8d5714f64a62bc38e5b06f9d05 WHIRLPOOL dec146a68d6213c443c834ea3642d497b0e511cbfc5b2705c61ed3e478e117a9be793612abdd456d26ca7234f687e510091e988dd0c05c2179bb9aa3fd024943
 EBUILD fontconfig-2.8.0-r1.ebuild 3979 SHA256 41cc191c9e0763037801dcc0c8d8c753ce3ec5f236cec906a2e21a6140e5306f SHA512 5f0e19e48f9a7ca5ea863f2dd6c1afdcc2de2433a06da0ce69e5b6fcb769c757ebf2dcfaa500fc6532862af100501d5162678a1f7ce11256a871520350956556 WHIRLPOOL 7aca6d65eba1a31ab29ade2dbe39f6fc85d6542bed47aaadd3bfa38f5708aacf60b357a8f2df61b16da7e654e91a16b345cf17997de775099bad91680d305c92
 EBUILD fontconfig-2.9.0.ebuild 4081 SHA256 6c897b70cec26bf69f8fd6344e62fa5204b4cd46860c1e5ea7cfa961c8b22b14 SHA512 7495d2a674d407d3ba535288b444034a3a7a9465eab1b89807e4f59366f0a8b548d0db973858026e58c4e633e0652ad7ffe9c0f5ba8037e207ede9082e84694b WHIRLPOOL 0d9a1b4d4dbd2c4e6fb790d5dea3e369ec112468843af9ce0c7a5f0dce0af1f411544b13dfeb4dceb4cfe9c1d5507dd304349ba33fc57a8a761ed47bc834ad18
-MISC ChangeLog 31738 SHA256 6b43b9463bd1831715e6e16e189c2925c2a3409e63072bed2ceddb173faf02be SHA512 8dad5eb58f0b6ba8e5a53bcecfe8a75b4e122c6785efba21a5224903bdcc3bb6e90e05689f68398202d6e4da1a69ab0667ff6985fc3116dfaf0426c5b1260763 WHIRLPOOL 0f1a8b49fe4eea71a8f2cb46a7301b1f2f160dff443160f8e5c2d621e6775e2c52923e78ca4d52341ef26c21c4bbd02bb682dabc659c639ea57e1ea81ba85f61
+MISC ChangeLog 31846 SHA256 904c81f0f04d036ad78eeb767d9586ee4a31551a02df0904819bbbffef59f72e SHA512 4eee2c7486a8d39039b0b2ae64f5777d5e4f74c3957763f0c27de206dc905400ccebdb4ce82345a0c9a881914573aac7864e3a3db618c1c475142eb417e16f48 WHIRLPOOL 6275068a7aa58199527d55f5a2f8b6991cb334ae6f2b3d581ecab48c6c5dc8d7913bbdc3504ef5bf640c9cdd1ae34a2d5c5c640a431a0d5ac7ac981419195611
 MISC metadata.xml 727 SHA256 90e4744ccb449b368e08690f44e02d4d8812b2a85223fb28943e5cbfd9bc1cbc SHA512 57e7f4ccb02227afe7ff2a9e2ad78a7ad54932d900a82c470bf0a71056357e8393d27c73e7f9f78940d8dc35d83182a14a0ca8feffe4c08a029c158ba343724d WHIRLPOOL fb47925fc948cac4a70befbf369a1cafcc94b00b607e07709692288fca5dd4fadb2e8e2e0b1e495d92ed3746d9fa9d45fd45d6aa4dea403617aa78b13e8b4f89
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlSZmUEACgkQCaWpQKGI+9TaiQCfWBZjHGbuUlJsUXwoR7bmddUG
-FMgAn0t39Z9N+7Qb4P7PpFHJozUHg2A+
-=h6EZ
+iEYEAREIAAYFAlSb46UACgkQVWmRsqeSphM/QQCdG9u5iGnG5xyfIL7MqwIKU3DT
+gngAn35ksj1+aYiVtmdcG4MHxGvznKmP
+=L1vo
 -----END PGP SIGNATURE-----
