@@ -1,14 +1,14 @@
 DEFINED_PHASES=configure install prepare
-DEPEND=cups? ( net-print/cups ) djvu? ( app-text/djvu ) fitz? ( app-text/mupdf:0/1.4 ) postscript? ( app-text/libspectre ) qt4? ( dev-qt/qtcore:4[iconv] dev-qt/qtgui:4 dbus? ( dev-qt/qtdbus:4 ) pdf? ( app-text/poppler[qt4] ) sqlite? ( dev-qt/qtsql:4[sqlite] ) svg? ( dev-qt/qtsvg:4 ) ) qt5? ( dev-qt/qtcore:5 dev-qt/qtgui:5 dev-qt/qtprintsupport:5 dbus? ( dev-qt/qtdbus:5 ) pdf? ( >=app-text/poppler-0.26.4[qt5] ) sqlite? ( dev-qt/qtsql:5[sqlite] ) svg? ( dev-qt/qtsvg:5 ) ) !svg? ( virtual/freedesktop-icon-theme ) virtual/pkgconfig
+DEPEND=cups? ( net-print/cups ) djvu? ( app-text/djvu ) fitz? ( app-text/mupdf:0/1.4 ) postscript? ( app-text/libspectre ) qt4? ( dev-qt/qtcore:4[iconv] dev-qt/qtgui:4 dbus? ( dev-qt/qtdbus:4 ) pdf? ( app-text/poppler[qt4] ) sqlite? ( dev-qt/qtsql:4[sqlite] ) svg? ( dev-qt/qtsvg:4 ) ) qt5? ( dev-qt/linguist-tools:5 dev-qt/qtcore:5 dev-qt/qtgui:5 dev-qt/qtprintsupport:5 dbus? ( dev-qt/qtdbus:5 ) pdf? ( >=app-text/poppler-0.26.4[qt5] ) sqlite? ( dev-qt/qtsql:5[sqlite] ) svg? ( dev-qt/qtsvg:5 ) ) !svg? ( virtual/freedesktop-icon-theme ) virtual/pkgconfig
 DESCRIPTION=A tabbed document viewer
 EAPI=5
 HOMEPAGE=http://launchpad.net/qpdfview
 IUSE=cups dbus djvu fitz +pdf postscript +qt4 qt5 sqlite +svg synctex linguas_ast linguas_az linguas_bg linguas_bs linguas_ca linguas_cs linguas_da linguas_de linguas_el linguas_en_GB linguas_eo linguas_es linguas_eu linguas_fi linguas_fr linguas_gl linguas_he linguas_hr linguas_id linguas_it linguas_kk linguas_ko linguas_ky linguas_lt linguas_ms linguas_my linguas_pl linguas_pt linguas_pt_BR linguas_ro linguas_ru linguas_sk linguas_sv linguas_tr linguas_ug linguas_uk linguas_vi linguas_zh_CN
 KEYWORDS=~amd64 ~arm ~x86 ~amd64-linux ~x86-linux
 LICENSE=GPL-2
-RDEPEND=cups? ( net-print/cups ) djvu? ( app-text/djvu ) fitz? ( app-text/mupdf:0/1.4 ) postscript? ( app-text/libspectre ) qt4? ( dev-qt/qtcore:4[iconv] dev-qt/qtgui:4 dbus? ( dev-qt/qtdbus:4 ) pdf? ( app-text/poppler[qt4] ) sqlite? ( dev-qt/qtsql:4[sqlite] ) svg? ( dev-qt/qtsvg:4 ) ) qt5? ( dev-qt/qtcore:5 dev-qt/qtgui:5 dev-qt/qtprintsupport:5 dbus? ( dev-qt/qtdbus:5 ) pdf? ( >=app-text/poppler-0.26.4[qt5] ) sqlite? ( dev-qt/qtsql:5[sqlite] ) svg? ( dev-qt/qtsvg:5 ) ) !svg? ( virtual/freedesktop-icon-theme )
+RDEPEND=cups? ( net-print/cups ) djvu? ( app-text/djvu ) fitz? ( app-text/mupdf:0/1.4 ) postscript? ( app-text/libspectre ) qt4? ( dev-qt/qtcore:4[iconv] dev-qt/qtgui:4 dbus? ( dev-qt/qtdbus:4 ) pdf? ( app-text/poppler[qt4] ) sqlite? ( dev-qt/qtsql:4[sqlite] ) svg? ( dev-qt/qtsvg:4 ) ) qt5? ( dev-qt/linguist-tools:5 dev-qt/qtcore:5 dev-qt/qtgui:5 dev-qt/qtprintsupport:5 dbus? ( dev-qt/qtdbus:5 ) pdf? ( >=app-text/poppler-0.26.4[qt5] ) sqlite? ( dev-qt/qtsql:5[sqlite] ) svg? ( dev-qt/qtsvg:5 ) ) !svg? ( virtual/freedesktop-icon-theme )
 REQUIRED_USE=^^ ( qt4 qt5 ) ?? ( fitz pdf )
 SLOT=0
 SRC_URI=https://launchpad.net/qpdfview/trunk/0.4.12/+download/qpdfview-0.4.12.tar.gz
 _eclasses_=eutils	6faef4c127028ccbba3a11400d24ae34	l10n	33bde4fb0cfd3a21a277b66bfd837e19	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	qmake-utils	9e0174de733aecba0a7e66b2b01841d2	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=95f6299e559e08976d2c29d4636e363e
+_md5_=76a8d6f63a85f6f9a21a339a3d3288fc
